Fix pygame-ce loading in Pyodide
- Use pyodide.loadPackage() instead of micropip.install() for pygame-ce
- Remove unnecessary micropip import in Python code
- Load pygame-ce as a Pyodide package before importing

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -192,11 +192,13 @@
                 console.log('Loading micropip...');
                 await pyodide.loadPackage('micropip');
 
+                console.log('Loading pygame-ce...');
+                await pyodide.loadPackage('pygame-ce');
+
                 console.log('Installing pygame-ce...');
                 await pyodide.runPythonAsync(`
-                    import micropip
-                    await micropip.install('pygame-ce')
-                    print('pygame-ce installed successfully')
+                    import pygame
+                    print('pygame-ce loaded successfully')
                 `);
 
                 console.log('Loading chess game...');
